Fixes#18 Fixing login issue

--- a/res/layout/preference_login_view.xml
+++ b/res/layout/preference_login_view.xml
@@ -37,7 +37,8 @@
             android:id="@+id/login_password"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:text="" />
+            android:text="" 
+            android:password="true"/>
     </LinearLayout>
 
 </LinearLayout>
